--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
 
-<a href="https://thefhtamim.cf/beatstore.html#!/~/cart"><i class="fa fa-shopping-cart"  style="font-size:48px;color:red"></i></a>
+<p style="text-align:right;"><a href="https://thefhtamim.cf/beatstore.html#!/~/cart"><i class="fa fa-shopping-cart"  style="font-size:48px;color:red"></i></a> </p>
 
 
 <br>
