--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Hello world</title>
+    <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.2.0/default/snipcart.css" />
+  </head>
+  <body>
+    <div class="content">
+      Your site content here
+    </div>
 
-
-<p style="text-align:right;"><a href="https://thefhtamim.cf/beatstore.html#!/~/cart"><i class="fa fa-shopping-cart"  style="font-size:48px;color:red"></i></a> </p>
-
-
-<br>
-  
-<div id="my-store-62145148"></div>
-<div>
-<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?62145148&data_platform=code&data_date=2021-06-12" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-62145148");</script>
-</div>
+    <script async src="https://cdn.snipcart.com/themes/v3.2.0/default/snipcart.js"></script>
+    <div hidden id="snipcart" data-api-key="YOUR_PUBLIC_API_KEY"></div>
+  </body>
+</html>
