--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Hello world</title>
-    <<link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.2.0/default/snipcart.css" />
+<link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.2.0/default/snipcart.css" />
 <script async src="https://cdn.snipcart.com/themes/v3.2.0/default/snipcart.js"></script>
 <div id="snipcart" data-config-modal-style="side" data-api-key="YzRhMDdjYjUtNTMxZS00YTY1LWI3OTMtYTYzMWNkODg3ODFkNjM3NTk1NTkxMTg2OTI5MDQy" hidden></div>
-  </body>
-</html>
